Bug 348037. GetIndexInParent impl for ATK counting too many children. r=ginn.chen